# ani-scrape

./: .gitignore  Makefile  README.md  config.example.yaml  main.py  pyproject.toml
.github/workflows/: build-image.yml
app/core/: config.py  database.py  logger.py  models.py
app/services/: anilist_client.py  discord_notifier.py  mangaupdates_client.py  scheduler.py  sync.py  tracker.py
deployment/: Dockerfile  docker-compose.yml
