[project]
name = "ani-scrape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "pyaml>=25.7.0",
    "pydantic>=2.12.5",
    "python-json-logger>=4.0.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]
